[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chromaviz"
version = "0.0.1"
authors = [
  { name="Spruce Campbell", email="spruce@mit.edu" },
]
description = "A package for visualising Chroma vector collections in 3D"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"