[build-system]
requires = ["setuptools==68.2.2"]
build-backend = "setuptools.build_meta"

[project]
name = "chromaviz"
version = "0.0.6"
authors = [
  { name="Spruce Campbell", email="spruce@mit.edu" },
]
description = "A package for visualising Chroma vector collections in 3D"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/mtybadger/chromaviz"
"Bug Tracker" = "https://github.com/mtybadger/chromaviz/issues"
