[metadata]
name = chromaviz
version = 0.0.3
author = Spruce Campbell
author_email = spruce@mit.edu
url = https://github.com/mtybadger/chromaviz
description = A package for visualising Chroma vector collections in 3D
long_description = file: README.md
long_description_content_type = text/markdown
keywords = example, setuptools
license = MIT License
classifiers =
    License :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    chromadb
